[lesson134116]: fixes after review